changed image and tried some stuff

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
 <html lang="en">
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-43247972-15"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -118,7 +119,7 @@
           <small>Crafted with <span style="color: red;">&hearts;</span> in Timisoara, Romania</small><br />
           <small>by <a href="https://www.ciclotrasee.ro" target="_blank">Ciclotrasee</a></small>
           <hr />
-          <p style="font-size:12px;">v0.0.30 <br /> PRE-ALPHA <br /> <a href="http://m.me/ciclotrasee" target="_blank"><i class="fas fa-comment"></i> Give us feedback</a></p>
+          <p style="font-size:12px;">v0.0.31 <br /> PRE-ALPHA <br /> <a href="http://m.me/ciclotrasee" target="_blank"><i class="fas fa-comment"></i> Give us feedback</a></p>
           <!-- <a href="#" class="js-backtotop">Back to top</a> -->
         </p>
       </div>
