--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
 {% load static %}
   
   <!-- START: section -->
-  <section class="probootstrap-intro" style="background-image: url({% static 'img/hero_bg_2.jpg' %});" data-stellar-background-ratio="0.5">
+  <section class="probootstrap-intro" style="background-image: url({% static 'img/new-bg.jpg' %});" data-stellar-background-ratio="0.5">
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-7 probootstrap-intro-text">
