--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -22,15 +22,19 @@
                     {% csrf_token %}
                     {{ form|crispy }}
 
-                <div class="form-group">
-                    <input type="submit" class="btn btn-primary" id="submit" name="submit" value="Login">
-                </div>
+                    <div class="form-group">
+                        <input type="submit" class="btn btn-primary" id="submit" name="submit" value="Login">
+                    </div>
                 </form>
 
-                <br />
+                {% comment %} <p style="text-align:center;">
+                    <a class="btn btn-primary" href=""><i class="fab fa-google"></i> Sign in with Google</a>
+                </p> {% endcomment %}
 			
-                <p style="text-align:center;">Dont't have an account? <a href="{% url 'signup' %}">Join us</a> <br />
-                Forgot your password? <a href="{% url 'password_reset' %}">Reset it</a></p>
+                <p style="text-align:center;">
+                    Dont't have an account? <a href="{% url 'signup' %}">Join us</a> <br />
+                    Forgot your password? <a href="{% url 'password_reset' %}">Reset it</a>
+                </p>
 
             </div>
         </div>
