--- a/templates/trail_detail.html
+++ b/templates/trail_detail.html
@@ -190,11 +190,13 @@
         </div>
     </div>
 
-    {% comment %} <div class="container">
-        <div class="cold-md-12" style="text-align:center;">
-            <iframe width="95%" height="450px" src="https://www.youtube.com/embed/b9qw_x6gdxg?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <!-- <div class="container">
+            <div class="cold-md-12" style="text-align:center;">
+                <iframe width="95%" height="450px" src="{{ youtube_video }}?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            </div>
         </div>
-    </div> {% endcomment %}
+
+        {{ youtube_video }} -->
 
     <!-- <div class="container" class="margin-top:10px;">
         {% if user.is_authenticated and user == trail.author %}
