--- a/templates/user_profile_settings.html
+++ b/templates/user_profile_settings.html
@@ -8,6 +8,8 @@
 {% block content %}
 
 {% load static %}
+
+{% load crispy_forms_tags %}
   
 {% include "header.html" %}
 
@@ -23,7 +25,17 @@
 
             </div>
 
+            <div class="col-md-8 col-md-offset-2 probootstrap-animate">
+                <form action="" method="post" class="probootstrap-form">
 
+                    {% csrf_token %}
+                    {{ form|crispy }}
+
+                    <div class="form-group">
+                        <input type="submit" class="btn btn-primary" id="submit" name="submit" value="Change profile">
+                    </div>
+                </form>
+            </div>
 
         </div>
     </div>
