--- a/templates/home.html
+++ b/templates/home.html
@@ -141,7 +141,7 @@
       <div class="row">
         <div class="col-md-4 col-md-offset-4 probootstrap-animate">
           <p class="text-center">
-            <a href="#" class="btn btn-ghost btn-ghost-white btn-lg btn-block" role="button">Explore other regions</a>
+            <p class="btn btn-ghost btn-ghost-white btn-lg btn-block" role="button">Coming soon</p>
           </p>
         </div>
       </div>
