--- a/templates/home.html
+++ b/templates/home.html
@@ -105,7 +105,7 @@
           <div class="probootstrap-block-image">
             <figure><a href="#"><img src="{% static 'img/region_romania.jpg' %}"></a></figure>
             <div class="text">
-              <h3 class="mb30"><a href="#">Romania</a></h3>
+              <h3 class="mb30"><a href="#">Banat</a></h3>
               <p class="dark">Romania is a European country known for the forested region of Transylvania, ringed by the Carpathian Mountains.</p>
               <!-- <p class="secondary-color rate"><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-half"></i></p>
               <hr>
@@ -117,7 +117,7 @@
           <div class="probootstrap-block-image">
             <figure><a href="#"><img src="{% static 'img/region_hungary.jpg' %}"></a></figure>
             <div class="text">
-              <h3 class="mb30"><a href="#">Hungary</a></h3>
+              <h3 class="mb30"><a href="#">Transilvania</a></h3>
               <p class="dark">Hungary is a landlocked country in Central Europe. Its capital, Budapest, is bisected by the Danube River.</p>
               <!-- <p class="secondary-color rate"><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-half"></i></p>
               <hr>
@@ -129,7 +129,7 @@
           <div class="probootstrap-block-image">
             <figure><a href="#"><img src="{% static 'img/region_serbia.jpg' %}"></a></figure>
             <div class="text">
-              <h3 class="mb30"><a href="#">Serbia</a></h3>
+              <h3 class="mb30"><a href="#">Crișana</a></h3>
               <p class="dark">Serbia is a country on southeast Europe's Balkan peninsula with northern plateaus and mountains with ski resorts to the south.</p>
               <!-- <p class="secondary-color rate"><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-half"></i></p>
               <hr>
