--- a/templates/trail_detail.html
+++ b/templates/trail_detail.html
@@ -111,8 +111,9 @@
                     //var bounds = turf.bbox(value);
                     //var bbox = turf.extent(value);
         
+                    
                     map.on('load', function () {
-        
+                        
                         map.addLayer({
                             "id": "route",
                             "type": "line",
@@ -136,6 +137,25 @@
                                 "line-width": 3.5
                             }
                         });
+                        // map.fitBounds(value.features[0].geometry.coordinates);
+                        // map.fitBounds(value.features[0].geometry.coordinates);
+
+                        var coordinates = value.features[0].geometry.coordinates;
+                        
+                        // Pass the first coordinates in the LineString to `lngLatBounds` &
+                        // wrap each coordinate pair in `extend` to include them in the bounds
+                        // result. A variation of this technique could be applied to zooming
+                        // to the bounds of multiple Points or Polygon geomteries - it just
+                        // requires wrapping all the coordinates with the extend method.
+                        var bounds = coordinates.reduce(function(bounds, coord) {
+                        return bounds.extend(coord);
+                        }, new mapboxgl.LngLatBounds(coordinates[0], coordinates[0]));
+                        
+                        map.fitBounds(bounds, {
+                        padding: 20
+                        });
+
+                        // console.log(value.features[0].geometry.coordinates);
 
                     });
 
