--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -13,6 +13,8 @@
   
 {% include "header.html" %}
 
+<h2 style="text-align:center;">Login into your account</h2>
+
 <section id="next-section" class="probootstrap-section">
     <div class="container">
         <div class="row mb60">
