--- a/templates/trail_list.html
+++ b/templates/trail_list.html
@@ -11,6 +11,8 @@
   
 {% include "header.html" %}
 
+<h1 style="text-align:center;">Trails</h1>
+
 <section id="next-section" class="probootstrap-section">
     <div class="container">
         <div class="row">
