fixed trails title

--- a/templates/trail_list.html
+++ b/templates/trail_list.html
@@ -11,7 +11,7 @@
   
 {% include "header.html" %}
 
-<h1 style="text-align:center;">Trails</h1>
+<h1 style="text-align:center;margin-top:70px;margin-bottom:-40px;">Trails</h1>
 
 <section id="next-section" class="probootstrap-section">
     <div class="container">
