--- a/templates/trail_list.html
+++ b/templates/trail_list.html
@@ -11,7 +11,7 @@
   
 {% include "header.html" %}
 
-<h1 style="text-align:center;margin-top:70px;margin-bottom:-40px;">Trails</h1>
+<h1 style="text-align:center;margin-top:70px;margin-bottom:-40px;">Ultimele trasee adăugate</h1>
 
 <section id="next-section" class="probootstrap-section">
     <div class="container">
@@ -46,7 +46,7 @@
                 <i class="fas fa-plus my-float"></i>
             </a>
             <div class="label-container">
-                <div class="label-text">Add trail</div>
+                <div class="label-text">Adaugă traseu nou</div>
             </div>
         
         </div>
