--- a/templates/about.html
+++ b/templates/about.html
@@ -82,7 +82,7 @@
         <div class="row">
         <div class="col-md-4 col-md-offset-4 probootstrap-animate">
             <p class="text-center">
-            <a href="mailto:info@biketrail.app" class="btn btn-ghost btn-ghost-white btn-lg btn-block" role="button">Contact Us</a>
+            <a href="mailto:ciclotrasee.ro@gmail.com" class="btn btn-ghost btn-ghost-white btn-lg btn-block" role="button">Contact Us</a>
             </p>
         </div>
         </div>
