--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 
 {% extends 'base.html' %}
 
-{% block title %}Amazing bike trails{% endblock %}
+{% block title %}Trasee de bicicletă în România{% endblock %}
 
 {% block content %}
 
@@ -26,44 +26,8 @@
   </section>
   <!-- END: section -->
   
-
-  <section class="probootstrap-section">
-    <div class="container">
-      <div class="row probootstrap-gutter0">
-
-      <h1 style="text-align:center; margin-bottom: 50px; font-size:38px;">CELE MAI FAINE TRASEE</h1>
-
-        {% for trail in object_list|slice:":6" %}
-          {% comment %} {% if trail.homepage_staff_pick %} {% endcomment %}
-
-            <div class="col-md-4 col-sm-6">
-              <a href="{% url 'trail_detail' trail.pk %}" class="probootstrap-hover-overlay">
-                <img src="{{ trail.image.url }}" class="img-responsive">
-                <div class="probootstrap-text-overlay">
-                  <h3>{{ trail.title|truncatewords:5 }}</h3>
-                  <p>
-                    <i class="fas fa-globe-asia"></i> {{ trail.region }} &nbsp;
-                    <i class="fas fa-ruler"></i> {{ trail.distance }} km &nbsp;
-                    <i class="fas fa-tachometer-alt"></i> {{ trail.difficulty }} 
-                  </p>
-                </div>
-              </a>
-            </div>
-
-            {% if forloop.counter|divisibleby:3 %}
-              </div>
-              <div class="row probootstrap-gutter0">
-            {% endif %}
-
-          {% comment %} {% endif %} {% endcomment %}
-        {% endfor %}
-        
-      </div>
-    </div>
-  </section>
-
   <!-- START: section -->
-  <section class="probootstrap-section">
+  <section class="probootstrap-section" style="margin-bottom:-180px;">
     <div class="container">
       <div class="row mb70">
         <div class="col-md-4 probootstrap-animate">
@@ -92,13 +56,91 @@
   </section>
   <!-- END: section -->
 
+  {% comment %} <section class="probootstrap-section">
+    <div class="container">
+      <div class="row probootstrap-gutter0">
+
+      <h1 style="text-align:center; margin-bottom: 50px; font-size:38px;">Ultimele trasee</h1>
+
+        {% for trail in object_list|slice:":6" %}
+          
+
+            <div class="col-md-4 col-sm-6">
+              <a href="{% url 'trail_detail' trail.pk %}" class="probootstrap-hover-overlay">
+                <img src="{{ trail.image.url }}" class="img-responsive">
+                <div class="probootstrap-text-overlay">
+                  <h3>{{ trail.title|truncatewords:5 }}</h3>
+                  <p>
+                    <i class="fas fa-globe-asia"></i> {{ trail.region }} &nbsp;
+                    <i class="fas fa-ruler"></i> {{ trail.distance }} km &nbsp;
+                    <i class="fas fa-tachometer-alt"></i> {{ trail.difficulty }} 
+                  </p>
+                </div>
+              </a>
+            </div>
+
+            {% if forloop.counter|divisibleby:3 %}
+              </div>
+              <div class="row probootstrap-gutter0">
+            {% endif %}
+
+          
+        {% endfor %}
+        
+      </div>
+    </div>
+  </section> {% endcomment %}
+
+  <section class="probootstrap-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 col-md-12 mb70 section-heading probootstrap-animate">
+          <h2 style="text-align: center;">Ultimele trasee adăugate</h2>
+          <!-- <p class="lead">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p> -->
+        </div>
+      </div>
+      <div class="row mb70">
+        {% for trail in object_list|slice:":6" %}
+          <div class="col-md-4 probootstrap-animate">
+            <div class="probootstrap-block-image">
+              <figure><a href="{% url 'trail_detail' trail.pk %}"><img src="{{ trail.image.url }}"></a></figure>
+              <div class="text">
+                <h3 class="mb30"><a href="{% url 'trail_detail' trail.pk %}">{{ trail.title|truncatewords:5 }}</a></h3>
+                <p class="dark">{{ trail.about|truncatewords:20 }}</p>
+                
+                <hr>
+                <p class="clearfix like"><a class="pull-left" href=""><i class="fas fa-globe-asia"></i> {{ trail.region }}</a> <a class="pull-right" href=""><i class="fas fa-ruler"></i> {{ trail.distance }} km</a></p>
+              </div>
+            </div>
+          </div>
+
+          {% if forloop.counter|divisibleby:3 %}
+            </div>
+            <div class="row mb70">
+          {% endif %}
+        {% endfor %}
+        
+      <div class="row">
+        <div class="col-md-4 col-md-offset-4 probootstrap-animate">
+          <p class="text-center">
+            <a href="{% url 'trail_list' %}">
+              <p class="btn btn-ghost btn-ghost-green btn-lg btn-block" role="button">Mai multe trasee</p>
+            </a>
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  
+
 
   <!-- START: section -->
   <section class="probootstrap-section probootstrap-section-colored">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 col-md-12 mb70 section-heading probootstrap-animate">
-          <h2 style="text-align: center;">Regions</h2>
+          <h2 style="text-align: center;">Regiuni</h2>
           <!-- <p class="lead">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p> -->
         </div>
       </div>
@@ -108,7 +150,7 @@
             <figure><a href="#"><img src="{% static 'img/region_romania.jpg' %}"></a></figure>
             <div class="text">
               <h3 class="mb30"><a href="#">Banat</a></h3>
-              <p class="dark">Romania is a European country known for the forested region of Transylvania, ringed by the Carpathian Mountains.</p>
+              <p class="dark">Banatul este o provincie istorică împărțită astăzi între România, Serbia (Banatul Sârbesc) și o foarte mică parte din Ungaria.</p>
               <!-- <p class="secondary-color rate"><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-half"></i></p>
               <hr>
               <p class="clearfix like"><a class="pull-left" href="#"><i class="icon-thumbs-up"></i> 5,216</a> <a class="pull-right" href="#"><i class="icon-thumbs-down"></i> 32</a></p> -->
@@ -120,7 +162,7 @@
             <figure><a href="#"><img src="{% static 'img/region_hungary.jpg' %}"></a></figure>
             <div class="text">
               <h3 class="mb30"><a href="#">Transilvania</a></h3>
-              <p class="dark">Hungary is a landlocked country in Central Europe. Its capital, Budapest, is bisected by the Danube River.</p>
+              <p class="dark">Transilvania sau Ardeal este o regiune istorică și geografică situată în interiorul arcului carpatic, una din regiunile istorice ale României.</p>
               <!-- <p class="secondary-color rate"><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-half"></i></p>
               <hr>
               <p class="clearfix like"><a class="pull-left" href="#"><i class="icon-thumbs-up"></i> 4,923</a> <a class="pull-right" href="#"><i class="icon-thumbs-down"></i> 12</a></p> -->
@@ -132,7 +174,7 @@
             <figure><a href="#"><img src="{% static 'img/region_serbia.jpg' %}"></a></figure>
             <div class="text">
               <h3 class="mb30"><a href="#">Crișana</a></h3>
-              <p class="dark">Serbia is a country on southeast Europe's Balkan peninsula with northern plateaus and mountains with ski resorts to the south.</p>
+              <p class="dark">Crișana este o regiune istorică situată pe teritoriile României și Ungariei, având ca limite naturale râul Tisa la vest, râul Mureș la sud, Munții Apuseni în est și râul Someș în nord.</p>
               <!-- <p class="secondary-color rate"><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-half"></i></p>
               <hr>
               <p class="clearfix like"><a class="pull-left" href="#"><i class="icon-thumbs-up"></i> 19,552</a> <a class="pull-right" href="#"><i class="icon-thumbs-down"></i> 7</a></p> -->
@@ -143,7 +185,7 @@
       <div class="row">
         <div class="col-md-4 col-md-offset-4 probootstrap-animate">
           <p class="text-center">
-            <p class="btn btn-ghost btn-ghost-white btn-lg btn-block" role="button">Coming soon</p>
+            <p class="btn btn-ghost btn-ghost-white btn-lg btn-block" role="button">În curând</p>
           </p>
         </div>
       </div>
@@ -157,23 +199,34 @@
     <div class="row">
       <div class="col-md-4">
         <div class="probootstrap-footer-widget">
-          <h3>About Biketrail</h3>
-          <p>Biketrail is all about enjoying nature and discovering new awesome places shared by other cool people by using the bicycle as an ecological way of transportation.</p>
-          <p><a href="{% url 'about' %}" class="link-with-icon">Learn More <i class=" icon-chevron-right"></i></a></p>
+          <h3>Despre Ciclotrasee</h3>
+          <p>Ciclotrasee este un site dedicat traseelor de bicicletă din afara oraşelor pe diverse tipuri de drumuri atent studiate și notate pentru o informare cât mai bună a celui interesat în a le parcurge.</p>
+          <p><a href="{% url 'about' %}" class="link-with-icon">Mai multe detalii <i class=" icon-chevron-right"></i></a></p>
         </div>
         <div class="probootstrap-footer-widget">
-          <h3>Connect with us</h3>
+          <h3>Social</h3>
           <ul class="probootstrap-footer-social">
-            <li><a href="https://www.twitter.com/biketrailapp" target="_blank"><i class="icon-twitter"></i></a></li>
-            <li><a href="https://www.facebook.com/biketrailapp" target="_blank"><i class="icon-facebook"></i></a></li>
-            <li><a href="https://www.instagram.com/biketrailapp" target="_blank"><i class="icon-instagram2"></i></a></li>
+            <li><a href="https://www.twitter.com/ciclotrasee" target="_blank"><i class="icon-twitter"></i></a></li>
+            <li><a href="https://www.facebook.com/ciclotrasee" target="_blank"><i class="icon-facebook"></i></a></li>
+            <li><a href="https://www.instagram.com/ciclotrasee" target="_blank"><i class="icon-instagram2"></i></a></li>
           </ul>
         </div>
       </div>
       <div class="col-md-4">
         <div class="probootstrap-footer-widget">
-          <h3>Popular trails</h3>
-          <ul class="probootstrap-product-list">
+          
+          <h3>Link-uri folositoare</h3>
+          <a href="{% url 'blog-home' %}"><h4>Blog</h4></a>
+          <a href="{% url 'about' %}"><h4>Despre noi</h4></a>
+          <a href="mailto:ciclotrasee.ro@gmail.com"><h4>Contact</h4></a>
+
+          {% comment %} <li class="mb20">
+            <a href="#">Despre noi</a>
+          </li> 
+          <li class="mb20">
+            <a href="#">Blog</a>
+          </li>  {% endcomment %}
+          {% comment %} <ul class="probootstrap-product-list">
 
             {% for trail in object_list|slice:":3" %}
               {% if trail.homepage_staff_pick %}
@@ -191,12 +244,13 @@
               {% endif %}
             {% endfor %}
 
-          </ul>
+          </ul> {% endcomment %}
         </div>
       </div>
+      
       <div class="col-md-4">
         <div class="probootstrap-footer-widget">
-          <h3>Recent trails</h3>
+          <h3>Ultimele trasee</h3>
           <ul class="probootstrap-product-list">
 
               {% for trail in object_list|slice:":3" %}
