added filtering to the trails

--- a/templates/home.html
+++ b/templates/home.html
@@ -124,7 +124,7 @@
         <div class="col-md-4 col-md-offset-4 probootstrap-animate">
           <p class="text-center">
             <a href="{% url 'trail_list' %}">
-              <p class="btn btn-ghost btn-ghost-green btn-lg btn-block" role="button">Mai multe trasee</p>
+              <p class="btn btn-ghost btn-ghost-green btn-lg btn-block" role="button"><span style="color:black;">Mai multe trasee</span></p>
             </a>
           </p>
         </div>
