404 page small change

--- a/templates/404.html
+++ b/templates/404.html
@@ -2,7 +2,7 @@
 
 {% extends 'base.html' %}
 
-{% block title %}Something happened{% endblock %}
+{% block title %}Locație greșită{% endblock %}
 
 {% block content %}
 
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="row">
             <div class="probootstrap-animate">
-                <h3><i class="fas fa-exclamation-triangle"></i> Sometthing went wrong.</h3>
+                <h3><i class="fas fa-exclamation-triangle"></i> Ai ajuns într-un loc greșit.</h3>
             </div>
         </div>
     </div>
