--- a/templates/trail_list.html
+++ b/templates/trail_list.html
@@ -16,7 +16,7 @@
 
 <form method="get" style="text-align:center;margin-top:50px;padding-left:300px;padding-right:300px;">
     {{ filter.form }}
-    <button style="" type="submit" class="btn btn-primary">Caută</button>
+    <button style="margin-left:20px;" type="submit" class="btn btn-primary">Caută</button>
 </form>
 
 {% comment %} <h1 style="text-align:center;margin-top:70px;margin-bottom:-40px;">Ultimele trasee adăugate</h1> {% endcomment %}
