--- a/templates/trail_new.html
+++ b/templates/trail_new.html
@@ -17,7 +17,8 @@
     <div class="container">
         <div class="row mb60">
             <div class="col-md-8 col-md-offset-2 probootstrap-animate">
-                <p>Share one of your lovely trails so other people can enjoy them as well. <br /> Don't forget that sharing is indeed caring. &#9786; </p>
+                <p>Împărtășește un traseu.</p>
+                {% comment %} <p>Share one of your lovely trails so other people can enjoy them as well. <br /> Don't forget that sharing is indeed caring. &#9786; </p> {% endcomment %}
                 <form action="" method="post" class="probootstrap-form" enctype="multipart/form-data">
 
                     {% csrf_token %}
